[tool.poetry]
name = "dice-roller"
version = "0.1.0"
description = ""
authors = ["Matthieu Rousseau <matthieurousseau86@gmail.com>"]
readme = "README.md"
packages = [{include = "dice_roller"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
